css/style.css
html, body {
  height: 100%;
  font-family: 'Alegreya Sans', sans-serif;
}

@media(max-width:768px) {
  #header {
    text-align: center;
  }

  #aboutme {
    text-align: center;
  }

  #about hr, #contact hr {
    margin: 8% auto;
  }
  #contact {
    text-align: center;
  }
  video {
    transform: translateX(-85%) translateY(-50%);
  }

}

.navbar {
  background-color: rgba(21,31,33,0.8);
  border-bottom: 1px solid #dedede;
  padding-right: 50px;
  font-family: 'Alegreya Sans', sans-serif;
}

.navbar .nav .nav-item .nav-link {
  color: #fff;
}

.navbar .nav .nav-item .nav-link:hover {
  color: #00CED1;
}

.home-button {
  color: #fff;
}

.home-button:hover {
  color: #00CED1;
}

/* HEADER */

video {
  display: block;
  position: relative;
  margin-top: 350px;
  margin-bottom: -350px;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
  transform: translateX(-50%) translateY(-50%);
  background-size: cover;
  transition: 1s opacity;
}

.video-container {
  overflow: hidden;
}

#discription {
  position: absolute;
  text-align: center;
  margin-top: -650px;
  color: #fff;
}

#chevron {
  position: absolute;
  text-align: center;
  margin-top: -250px;
  color: #fff;
}

.fa-chevron-down {
  color: #fff;
}

.fa-chevron-down:hover {
  color: #00CED1;
  text-decoration: none;
}

/* Underline From Left */
.hvr-underline {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
  overflow: hidden;
}
.hvr-underline:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 100%;
  bottom: 0;
  background: #eee;
  height: 4px;
  -webkit-transition-property: right;
  transition-property: right;
  -webkit-transition-duration: 0.6s;
  transition-duration: 0.6s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-underline:hover:before, .hvr-underline:focus:before, .hvr-underline:active:before {
  right: 0;
}

/*About*/
#about {
  padding: 4.25rem 0;
}

.selfie {
  width: 80%;
  height: 80%;
  text-align: center;
  border-radius: 50%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
}

/*Projects*/
#projects {
  padding: 4.25rem 0;
  background-color: #E0FFFF;
}

.card-img-top {
  height: 285px;
  width: 485px;
}

.card-block {
  width: 485px;
  text-align: center;
  margin-bottom: 50px;
}

#projects .projects-img {
  position: relative;
}

#projects .projects-img .img-overlay {
  position: absolute;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.8);
  width: 485px;
  height: 285px;
  background-image: url('../img/link.png');
  background-size: 30px;
  background-position: center center;
  background-repeat: no-repeat;
  opacity: 0;
  z-index: 0;
  transition:all 0.2s linear, 1s;
}

#projects .projects-img .img-overlay:hover {
  opacity: 1;
  z-index: 1;
}

.btn-custom {
  font-size: 18px;
  border-color: #00CED1;
  background-color:	#00CED1;
  width: 318px;
}

.btn-custom:hover {
  font-weight: bold;
  color: #00CED1;
  border-color: #00CED1;
  background-color: #fff;
  transition:all 550ms linear;
}

/*EXPERIENCE*/
#experience {
  padding: 4.25rem 0;
}

.timeline {
  list-style: none;
  padding: 20px 0 20px;
  position: relative;
}
.timeline:before {
  top: 0;
  bottom: 0;
  position: absolute;
  content:" ";
  width: 3px;
  background-color: #00CED1;
  left: 50%;
  margin-left: -1.5px;
}
.timeline > li {
  margin-bottom: 20px;
  position: relative;
}
.timeline > li:before, .timeline > li:after {
  content:" ";
  display: table;
}
.timeline > li:after {
  clear: both;
}
.timeline > li:before, .timeline > li:after {
  content:" ";
  display: table;
}
.timeline > li:after {
  clear: both;
}
.timeline > li > .timeline-panel {
  width: 46%;
  float: left;
  border: 1px solid #00CED1;
  border-radius: 15px;
  padding: 20px;
  position: relative;
  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
}
.timeline > li > .timeline-panel:before {
  position: absolute;
  top: 26px;
  right: -15px;
  display: inline-block;
  border-top: 15px solid transparent;
  border-left: 15px solid #00CED1;
  border-right: 0 solid #00CED1;
  border-bottom: 15px solid transparent;
  content:" ";
}
.timeline > li > .timeline-panel:after {
  position: absolute;
  top: 27px;
  right: -14px;
  display: inline-block;
  border-top: 14px solid transparent;
  border-left: 14px solid #fff;
  border-right: 0 solid #fff;
  border-bottom: 14px solid transparent;
  content:" ";
}
.timeline > li > .timeline-badge {
  color: #fff;
  width: 50px;
  height: 50px;
  line-height: 50px;
  font-size: 1.4em;
  text-align: center;
  position: absolute;
  top: 16px;
  left: 50%;
  margin-left: -25px;
  background-color: #00CED1;
  z-index: 100;
  border-top-right-radius: 50%;
  border-top-left-radius: 50%;
  border-bottom-right-radius: 50%;
  border-bottom-left-radius: 50%;
}
.timeline > li.timeline-inverted > .timeline-panel {
  float: right;
}
.timeline > li.timeline-inverted > .timeline-panel:before {
  border-left-width: 0;
  border-right-width: 15px;
  left: -15px;
  right: auto;
}
.timeline > li.timeline-inverted > .timeline-panel:after {
  border-left-width: 0;
  border-right-width: 14px;
  left: -14px;
  right: auto;
}
.timeline-badge.primary {
  background-color: #00CED1 !important;
}
.timeline-badge.warning {
  background-color: #00CED1 !important;
}
.timeline-badge.danger {
  background-color: #00CED1 !important;
}
.timeline-badge.info {
  background-color: #00CED1 !important;
}
.timeline-title {
  margin-top: 0;
  color: inherit;
}
.timeline-body > p, .timeline-body > ul {
  margin-bottom: 0;
}
.timeline-body > p + p {
  margin-top: 5px;
}
/* ... */

